[package]
name = "fraiseql_rs"
version = "1.8.5"
edition = "2021"
authors = ["FraiseQL Contributors"]
description = "Ultra-fast GraphQL JSON transformation in Rust for FraiseQL"
readme = "README.md"
repository = "https://github.com/fraiseql/fraiseql"
license = "MIT"
keywords = ["graphql", "json", "performance", "pyo3", "rust"]
categories = ["web-programming", "api-bindings"]
publish = false

# ============================================================================
# LINTING CONFIGURATION - Phase 0.1: Basic Quality Enforcement
# ============================================================================
[lints.clippy]
# Core quality lints (allow some flexibility initially)
todo = "deny"                     # FORCE completion before merge
unwrap_used = "warn"              # Catch unwrap() calls
expect_used = "warn"              # Catch expect() calls
panic = "warn"                    # Catch panic!() calls
unimplemented = "warn"            # Catch unimplemented!()
dbg_macro = "warn"                # Catch debug macros

# Performance basics
redundant_clone = "warn"
vec_init_then_push = "warn"

# Code clarity basics
too_many_arguments = "warn"       # Enforce function argument limits
cognitive_complexity = "warn"     # Detect overly complex functions

[lints.rust]
unsafe_code = "warn"              # Track all unsafe blocks
missing_docs = "warn"             # Require docs on public items

[lib]
name = "fraiseql_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["simd"]
simd = []
dhat-heap = []

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }

# JSON parsing and serialization (zero-copy where possible)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Fast string operations
# Note: Will add for Phase 2 (camelCase optimization)
# smallvec = "1.13"

# SIMD support
packed_simd = { version = "0.3", optional = true }

# Schema registry dependencies
arc-swap = "1.6"
once_cell = "1.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"                    # Async runtime for tests
tokio = { version = "1.0", features = ["full"] }

# Test database containers
testcontainers = "0.15"               # Docker containers for tests
testcontainers-modules = { version = "0.2", features = ["postgres"] }

# PostgreSQL client for testing
tokio-postgres = "0.7"

# Assertions and matchers
assert_matches = "1.5"                # Pattern matching in assertions
pretty_assertions = "1.4"             # Pretty-print assertion failures

# Mocking
mockall = "0.12"                      # Mock objects for unit tests

# Property testing
proptest = "1.0"                      # Generate test cases

# Testing
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }

# Benchmarking infrastructure (Phase 0)
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"  # Heap profiling

# Benchmark targets (Phase 0)
[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "core_benchmark"
harness = false

# Binary targets removed - use benches/ for performance testing

[profile.release]
opt-level = 3
lto = "fat"              # Link-time optimization across all crates
codegen-units = 1        # Better optimization (slower compile)
panic = "abort"          # Smaller binary, faster unwinding
strip = true             # Remove debug symbols
overflow-checks = false  # Disable overflow checks in release
incremental = false      # Disable incremental compilation for better optimization

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false

# Profile-guided optimization (PGO) profile
[profile.release-pgo]
inherits = "release"
# PGO will be enabled when we have training data

# Benchmark profile for accurate measurements
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
incremental = false

# Test profile configuration
[profile.test]
opt-level = 1                    # Some optimization for faster tests
incremental = true               # Faster rebuild during test development

# Keep debug info for better error messages
debug = true
debug-assertions = true
overflow-checks = true

[build-dependencies]
# Detect CPU features at compile time
target-features = "0.1"
