[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraiseql-token-benchmarks"
version = "0.1.0"
description = "LLM token consumption analysis for GraphQL architectures"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "FraiseQL Team" },
]
keywords = ["graphql", "llm", "tokens", "benchmarks", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Token counting
    "tiktoken>=0.8.0",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",

    # CLI and output
    "rich>=13.9.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",

    # HTTP clients
    "httpx>=0.28.1",
    "aiohttp>=3.11.0",

    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",

    # Data analysis
    "pandas>=2.2.0",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
# LLM providers
openai = ["openai>=1.10.0"]
anthropic = ["anthropic>=0.18.0"]
cohere = ["cohere>=4.37.0"]
local = ["transformers>=4.36.0", "torch>=2.1.0", "accelerate>=0.25.0"]
all-providers = ["fraiseql-token-benchmarks[openai,anthropic,cohere,local]"]

# Visualization
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
]

# Code analysis
analysis = [
    "ast-grep-py>=0.12.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "graphql-core>=3.2.0",
]

# Development
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-tabulate",
]

# Full installation
all = ["fraiseql-token-benchmarks[all-providers,viz,analysis,dev]"]

[project.scripts]
fraiseql-tokens = "fraiseql_token_benchmarks.cli:main"
fraiseql-tokens-analyze = "fraiseql_token_benchmarks.analyzer:main"
fraiseql-tokens-report = "fraiseql_token_benchmarks.reporter:main"

[project.urls]
Homepage = "https://github.com/fraiseql/fraiseql"
Documentation = "https://fraiseql.readthedocs.io"
Repository = "https://github.com/fraiseql/fraiseql"
Issues = "https://github.com/fraiseql/fraiseql/issues"

[tool.hatch.build.targets.wheel]
packages = ["fraiseql_token_benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
