[package]
name = "fraiseql-arrow"
version = "0.1.0"
edition = "2021"
authors = ["FraiseQL Contributors"]
description = "Apache Arrow Flight integration for FraiseQL"
license = "MIT OR Apache-2.0"

[dependencies]
# Arrow ecosystem
arrow = "53"
arrow-flight = "53"
arrow-schema = "53"

# gRPC framework
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "fraiseql_arrow"
path = "src/lib.rs"
