[package]
name = "fraiseql-arrow"
version = "0.1.0"
edition = "2021"
authors = ["FraiseQL Contributors"]
description = "Apache Arrow Flight integration for FraiseQL"
license = "MIT OR Apache-2.0"

[dependencies]
# Arrow ecosystem
arrow = "53"
arrow-flight = "53"
arrow-schema = "53"

# gRPC framework
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Concurrent data structures
dashmap = "6.1"

# Async utilities
async-trait = "0.1"

# Date/time parsing
chrono = { version = "0.4", features = ["serde"] }

# UUID generation (used in handshake for session tokens)
uuid = { version = "1", features = ["v4"] }

# FraiseQL core (for Executor and query execution)
fraiseql-core = { path = "../fraiseql-core" }

# ClickHouse client (optional)
clickhouse = { version = "0.14", features = ["inserter"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
criterion = { version = "0.5", features = ["async_tokio"] }

# Integration test dependencies
fraiseql-core = { path = "../fraiseql-core" }
fraiseql-server = { path = "../fraiseql-server", features = ["arrow"] }

[lib]
name = "fraiseql_arrow"
path = "src/lib.rs"

[[bench]]
name = "flight_benchmarks"
harness = false

[[bench]]
name = "arrow_vs_json_serialization"
harness = false

[features]
default = []
clickhouse = ["dep:clickhouse"]
