[[bench]]
harness = false
name = "flight_benchmarks"

[[bench]]
harness = false
name = "arrow_vs_json_serialization"

[dependencies]
# Arrow ecosystem (with CSV and Parquet support)
arrow = {version = "57", features = ["csv", "json"]}
arrow-flight = "57"
arrow-schema = "57"
# Async utilities
async-stream = "0.3"
async-trait = {workspace = true}
# Date/time parsing
chrono = {workspace = true}
# ClickHouse client (optional)
clickhouse = {version = "0.14", features = ["inserter"], optional = true}
# Concurrent data structures
dashmap = {workspace = true}
# FraiseQL core (for Executor and query execution)
fraiseql-core = {workspace = true}
futures = {workspace = true}
# JWT handling (for session token creation and validation)
jsonwebtoken = {workspace = true}
parquet = "57"
prost = "0.14"
# Serialization
serde = {workspace = true}
serde_json = {workspace = true}
# Error handling
thiserror = {workspace = true}
# Async runtime
tokio = {workspace = true, features = ["rt", "macros", "sync", "time"]}
tokio-stream = "0.1"
# gRPC framework
tonic = "0.14"
# Logging
tracing = {workspace = true}
# UUID generation (used in handshake for session tokens)
uuid = {workspace = true}

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
# Integration test dependencies
fraiseql-core = {workspace = true, features = ["postgres"]}
sqlx = {workspace = true, features = ["postgres", "chrono", "uuid"]}
temp-env = {workspace = true}
tempfile = {workspace = true}
tokio-stream = "0.1"
tokio-test = "0.4"
tracing-subscriber = {workspace = true}
uuid = {workspace = true}

[features]
clickhouse = ["dep:clickhouse"]
default = []
testing = []
wire-backend = []

[lib]
name = "fraiseql_arrow"
path = "src/lib.rs"

[lints]
workspace = true

[package]
description = "Apache Arrow Flight integration for FraiseQL"
name = "fraiseql-arrow"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
