[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
axum = {workspace = true, features = ["macros"]}
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = {version = "0.4", features = ["serde"]}
dashmap = "6.1"
hex = "0.4"
hmac = {version = "0.12", features = ["std"]}
http = "1"
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
rand = "0.8"
# Redis for distributed rate limiting (optional)
redis = {version = "1", features = ["aio", "tokio-comp", "connection-manager"], optional = true}
reqwest = {workspace = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"]}
subtle = "2.5"
thiserror = "2.0"
tokio = {workspace = true}
tower = {version = "0.5"}
tracing = "0.1"
url = "2"
urlencoding = "2.1"
uuid = {version = "1.21", features = ["v4", "serde"]}
zeroize = "1.8"

[[bench]]
harness = false
name = "auth_bench"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
proptest = {workspace = true}
temp-env = {workspace = true}
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
redis-pkce = ["redis"]
redis-rate-limiting = ["redis"]

[lints]
workspace = true

[package]
description = "Authentication, authorization, and session management for FraiseQL"
name = "fraiseql-auth"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
