[dependencies]
aes-gcm = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true, features = ["macros"]}
base64 = {workspace = true}
chacha20poly1305 = "0.10"
chrono = {workspace = true}
dashmap = {workspace = true}
hex = {workspace = true}
http = "1"
jsonwebtoken = {workspace = true}
rand = {workspace = true}
# Redis for distributed rate limiting (optional)
redis = {version = "0.28", features = ["aio", "tokio-comp", "connection-manager"], optional = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
sqlx = {workspace = true, features = ["postgres", "uuid", "chrono"]}
subtle = "2.5"
thiserror = {workspace = true}
tokio = {workspace = true, features = ["rt", "sync", "time", "macros"]}
tower = {workspace = true}
tracing = {workspace = true}
urlencoding = "2.1"
uuid = {workspace = true}
zeroize = "1.8"

[dev-dependencies]
temp-env = {workspace = true}
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
redis-pkce = ["redis"]
redis-rate-limiting = ["redis"]

[lints]
workspace = true

[package]
description = "Authentication, authorization, and session management for FraiseQL"
name = "fraiseql-auth"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
