[[bin]]
name = "fraiseql-cli"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
# CLI framework
clap = {version = "4.5", features = ["derive", "cargo", "color", "suggestions"]}
# Database connection (for introspect/validate commands)
deadpool-postgres = {workspace = true}
# Workspace dependencies
fraiseql-core = {workspace = true, features = ["postgres", "schema-lint"]}
fraiseql-server = {workspace = true, optional = true}
axum = {workspace = true, optional = true}
glob = "0.3"
prost = "0.13"
prost-types = "0.13"
reqwest = {workspace = true}
# Serialization
indexmap = {workspace = true}
# File watching (for serve command)
notify = "7.0"
regex = {workspace = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = {workspace = true}
thiserror = "2.0"
# Async runtime
tokio = {workspace = true}
tokio-postgres = {workspace = true, features = ["with-serde_json-1"]}
toml = "0.8"
# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "ansi"]}
# Multi-file schema loading
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
insta = {version = "1", features = ["yaml"]}
predicates = "3"
temp-env = {workspace = true}
tempfile = "3.25"

[features]
default = []
run-server = ["dep:fraiseql-server", "dep:axum"]

[lints]
workspace = true

[package]
description = "CLI tools for FraiseQL v2 - Schema compilation and development utilities"
name = "fraiseql-cli"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.binstall]
bin-dir = "fraiseql{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/fraiseql-{ target }.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
